--- a/js/package.json
+++ b/js/package.json
@@ -27,15 +27,12 @@
     "build:app": "webpack --progress",
     "build:lib": "webpack --config webpack.libraries --progress",
     "build:dll": "webpack --config webpack.vendor --progress",
-
     "ci:build": "npm run ci:build:dll && npm run ci:build:dll && npm run ci:build:app",
     "ci:build:app": "NODE_ENV=production webpack",
     "ci:build:lib": "NODE_ENV=production webpack --config webpack.libraries",
     "ci:build:dll": "NODE_ENV=production webpack --config webpack.vendor",
-
     "start": "npm install && npm run build:dll && npm run start:app",
     "start:app": "webpack-dev-server -d --history-api-fallback --open --hot --inline --progress --colors --port 3000",
-
     "clean": "rm -rf ./build ./coverage",
     "coveralls": "npm run testCoverage && coveralls < coverage/lcov.info",
     "lint": "eslint --ignore-path .gitignore ./src/",
@@ -113,6 +110,7 @@
     "bignumber.js": "^2.3.0",
     "blockies": "0.0.2",
     "bytes": "^2.4.0",
+    "chart.js": "^2.3.0",
     "es6-promise": "^3.2.1",
     "file-saver": "^1.3.3",
     "format-json": "^1.0.3",
@@ -127,6 +125,7 @@
     "moment": "^2.14.1",
     "react": "^15.2.1",
     "react-addons-css-transition-group": "^15.2.1",
+    "react-chartjs-2": "^1.5.0",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.6.1",
