--- a/js/.babelrc
+++ b/js/.babelrc
@@ -13,18 +13,19 @@
   "retainLines": true,
   "env": {
     "production": {
-      "plugins": ["transform-react-remove-prop-types"]
+      "plugins": [
+        "transform-react-remove-prop-types"
+      ]
     },
     "development": {
-      "plugins": ["react-hot-loader/babel"]
+      "plugins": [
+        "react-hot-loader/babel",
+        ["react-intl", { "messagesDir": "./.build/i18n/" }]
+      ]
     },
     "test": {
       "plugins": [
-        [
-          "babel-plugin-webpack-alias", {
-            "config": "webpack/test.js"
-          }
-        ]
+        ["babel-plugin-webpack-alias", { "config": "webpack/test.js" }]
       ]
     }
   }
