--- a/rpc/Cargo.toml
+++ b/rpc/Cargo.toml
@@ -25,6 +25,7 @@ ethash = { path = "../ethash" }
 ethsync = { path = "../sync" }
 ethjson = { path = "../json" }
 ethcore-devtools = { path = "../devtools" }
+parity-updater = { path = "../updater" }
 rlp = { path = "../util/rlp" }
 fetch = { path = "../util/fetch" }
 rustc-serialize = "0.3"
