--- a/js/package.json
+++ b/js/package.json
@@ -36,7 +36,7 @@
     "ci:build:npm": "NODE_ENV=production webpack --config webpack/npm",
     "start": "npm install && npm run build:lib && npm run build:dll && npm run start:app",
     "start:app": "node webpack/dev.server",
-    "clean": "rm -rf ./build ./coverage",
+    "clean": "rm -rf ./.build ./.coverage ./.happypack ./.npmjs ./build",
     "coveralls": "npm run testCoverage && coveralls < coverage/lcov.info",
     "lint": "eslint --ignore-path .gitignore ./src/",
     "lint:cached": "eslint --cache --ignore-path .gitignore ./src/",
